libraries/ckit/regression/valid-programs/a237.c
char * malloc();

main () {
 char *reg_equiv_replace = (char *) malloc (sizeof *reg_equiv_replace);
}

